--- a/haskellbook.cabal
+++ b/haskellbook.cabal
@@ -1,10 +1,8 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.6.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: 942451213d61cc7317d49d92077e32d390d4f726c5ef0e417cb5c20529bcacaa
 
 name:           haskellbook
 version:        0.1.0.0
@@ -27,7 +25,7 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Main
   other-modules:
       Paths_haskellbook
   hs-source-dirs:
@@ -41,11 +39,19 @@ executable haskellbook-exe
   other-modules:
       Paths_haskellbook
   hs-source-dirs:
-      app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+      src
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
       base >=4.7 && <5
     , haskellbook
+  default-language: Haskell2010
+
+executable hangman
+  main-is: Main.hs
+  hs-source-dirs: src/chapter13/hangman/src
+  build-depends: base >=4.7 && <5
+                 , random
+                 , split
   default-language: Haskell2010
 
 test-suite haskellbook-test
