--- a/haskellbook.cabal
+++ b/haskellbook.cabal
@@ -19,17 +19,52 @@ extra-source-files:
     README.md
     ChangeLog.md
 
-source-repository head
-  type: git
-  location: https://github.com/githubuser/haskellbook
+-- library addition
+--   exposed-modules: Addition
+--   ghc-options: -Wall -fwarn-tabs
+--   build-depends: base >= 4.7 && <5
+--                  , hspec
+--                  , QuickCheck
+--   hs-source-dirs: src/chapter14
+--   default-language: Haskell2010
 
-executable hangman
-  main-is: Main.hs
-  hs-source-dirs: src/chapter13/hangman/src
-  build-depends: base >=4.7 && <5
-                 , random
-                 , split
+library
+  exposed-modules: Morse
+  build-depends: base >= 4.7 && <5
+                 , containers
+                 , QuickCheck
+                 , hspec
+  hs-source-dirs: src/chapter14/morse/src
   default-language: Haskell2010
+
+executable morse
+  main-is: Main.hs
+  ghc-options: -Wall -fwarn-tabs -main-is Main
+  other-modules: Morse
+  hs-source-dirs: src/chapter14/morse/src
+  build-depends: base >=4.7 && <5
+                 , containers
+                --  library name needs to match project name
+                 , haskellbook
+                 , QuickCheck
+  default-language: Haskell2010
+
+test-suite morse-tests
+  ghc-options: -Wall -fno-warn-orphans
+  type: exitcode-stdio-1.0
+  main-is: tests.hs
+  hs-source-dirs: src/chapter14/morse/tests
+  build-depends: base, containers, haskellbook, QuickCheck
+  default-language: Haskell2010
+
+-- executable hangman
+--   main-is: Hangman.hs
+--   ghc-options: -main-is Hangman
+--   hs-source-dirs: src/chapter13/hangman/src
+--   build-depends: base >=4.7 && <5
+--                  , random
+--                  , split
+--   default-language: Haskell2010
 
 test-suite haskellbook-test
   type: exitcode-stdio-1.0
