--- a/haskellbook.cabal
+++ b/haskellbook.cabal
@@ -26,6 +26,7 @@ library
                  , QuickCheck
                  , hspec
                  , checkers
+                 , transformers
   hs-source-dirs: src/chapter14/morse/src
   default-language: Haskell2010
 
